force-app/main/default/objects/Conduit_Audit__c/Conduit_Audit__c.object-meta.xml
<CustomObject>
    <label>Conduit Audit</label>
    <nameField>
        <displayFormat>AUDIT-{0000}</displayFormat>
        <label>Conduit Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conduit Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>