force-app/main/default/objects/Conduit_Audit__c/fields/Findings_Summary__c.field-meta.xml
<CustomField>
    <fullName>Findings_Summary__c</fullName>
    <label>Findings Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>