force-app/main/default/objects/Conduit_Audit__c/fields/Freshness_Abandoned__c.field-meta.xml
<CustomField>
    <fullName>Freshness_Abandoned__c</fullName>
    <label>Freshness: Abandoned</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>