force-app/main/default/objects/Conduit_Audit__c/fields/Freshness_Stale__c.field-meta.xml
<CustomField>
    <fullName>Freshness_Stale__c</fullName>
    <label>Freshness: Stale</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>