force-app/main/default/objects/Conduit_Audit__c/fields/Gap_Analysis_Items__c.field-meta.xml
<CustomField>
    <fullName>Gap_Analysis_Items__c</fullName>
    <label>Gap Analysis Items</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>