force-app/main/default/objects/Conduit_Audit__c/fields/Gap_Analysis_Summary__c.field-meta.xml
<CustomField>
    <fullName>Gap_Analysis_Summary__c</fullName>
    <label>Gap Analysis Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>