force-app/main/default/objects/Conduit_Audit__c/fields/Gap_Detail__c.field-meta.xml
<CustomField>
    <fullName>Gap_Detail__c</fullName>
    <label>Gap Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>