force-app/main/default/objects/Conduit_Audit__c/fields/Migration_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Migration_Confidence__c</fullName>
    <label>Migration Confidence</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>