force-app/main/default/objects/Conduit_Audit__c/fields/Migration_Runbook__c.field-meta.xml
<CustomField>
    <fullName>Migration_Runbook__c</fullName>
    <label>Migration Runbook</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>