force-app/main/default/objects/Conduit_Audit__c/fields/Migration_Steps__c.field-meta.xml
<CustomField>
    <fullName>Migration_Steps__c</fullName>
    <label>Migration Steps</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>