force-app/main/default/objects/Conduit_Audit__c/fields/Rationalization_Items__c.field-meta.xml
<CustomField>
    <fullName>Rationalization_Items__c</fullName>
    <label>Rationalization Items</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>