force-app/main/default/objects/Conduit_Audit__c/fields/Run_At__c.field-meta.xml
<CustomField>
    <fullName>Run_At__c</fullName>
    <label>Run At</label>
    <type>DateTime</type>
</CustomField>