force-app/main/default/objects/Conduit_Audit__c/fields/Scope_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Scope_Estimate__c</fullName>
    <label>Scope Estimate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>