force-app/main/default/objects/Conduit_Audit__c/fields/Scope_Estimate_Run_At__c.field-meta.xml
<CustomField>
    <fullName>Scope_Estimate_Run_At__c</fullName>
    <label>Scope Estimate Run At</label>
    <type>DateTime</type>
</CustomField>