force-app/main/default/objects/Conduit_Audit__c/fields/Source_Platform__c.field-meta.xml
<CustomField>
    <fullName>Source_Platform__c</fullName>
    <label>Source Platform</label>
    <length>50</length>
    <type>Text</type>
</CustomField>