force-app/main/default/objects/Conduit_Audit__c/fields/Target_Platform__c.field-meta.xml
<CustomField>
    <fullName>Target_Platform__c</fullName>
    <label>Target Platform</label>
    <length>50</length>
    <type>Text</type>
</CustomField>