force-app/main/default/objects/Conduit_Audit__c/fields/Total_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Assets__c</fullName>
    <label>Total Assets</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>