force-app/main/default/objects/Conduit_Audit__c/fields/Total_Audiences__c.field-meta.xml
<CustomField>
    <fullName>Total_Audiences__c</fullName>
    <label>Total Audiences</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>