force-app/main/default/objects/Conduit_Audit__c/fields/Total_Data_Objects__c.field-meta.xml
<CustomField>
    <fullName>Total_Data_Objects__c</fullName>
    <label>Total Data Objects</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>