force-app/main/default/objects/Conduit_Audit__c/fields/Wave_Notes__c.field-meta.xml
<CustomField>
    <fullName>Wave_Notes__c</fullName>
    <label>Wave Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>