force-app/main/default/objects/Conduit_Audit__c/fields/Wave_Notes_Run_At__c.field-meta.xml
<CustomField>
    <fullName>Wave_Notes_Run_At__c</fullName>
    <label>Wave Notes Run At</label>
    <type>DateTime</type>
</CustomField>